@@ -8,28 +8,28 @@
 # NO rownames for this function.  Just the contents of the data.frame!
 # have showNA=TRUE for legacy reason
 #
-.write_block <- function(wb, sheet, y, rowIndex=1:nrow(y),
-   colIndex=1:ncol(y), showNA=TRUE)
+.write_block <- function(wb, sheet, y, rowIndex=seq_len(nrow(y)),
+   colIndex=seq_len(ncol(y)), showNA=TRUE)
 {
   rows  <- createRow(sheet, rowIndex)      # create rows 
   cells <- createCell(rows, colIndex)      # create cells
 
   for (ic in seq_len(ncol(y)))
-    mapply(setCellValue, cells[1:nrow(cells), colIndex[ic]], y[,ic], FALSE, showNA)
+    mapply(setCellValue, cells[seq_len(nrow(cells)), colIndex[ic]], y[,ic], FALSE, showNA)
 
   # Date and POSIXct classes need to be formatted
   indDT <- which(sapply(y, class) == "Date")
   if (length(indDT) > 0) {
     dateFormat <- CellStyle(wb) + DataFormat(getOption("xlsx.date.format"))
     for (ic in indDT){
-      lapply(cells[1:nrow(cells),colIndex[ic]], setCellStyle, dateFormat)
+      lapply(cells[seq_len(nrow(cells)),colIndex[ic]], setCellStyle, dateFormat)
     }
   }
   indDT <- which(sapply(y, class) == "POSIXct")
   if (length(indDT) > 0) {
     datetimeFormat <- CellStyle(wb) + DataFormat(getOption("xlsx.datetime.format"))
     for (ic in indDT){
-      lapply(cells[1:nrow(cells),colIndex[ic]], setCellStyle, datetimeFormat)
+      lapply(cells[seq_len(nrow(cells)),colIndex[ic]], setCellStyle, datetimeFormat)
     }
   }
 
@@ -69,8 +69,8 @@ write.xlsx <- function(x, file, sheetName="Sheet1",
   if (row.names)             # add rownames to data x                   
     x <- cbind(rownames=rownames(x), x)
   
-  colIndex <- 1:ncol(x)
-  rowIndex <- 1:nrow(x) + iOffset
+  colIndex <- seq_len(ncol(x))
+  rowIndex <- seq_len(nrow(x)) + iOffset
   
   .write_block(wb, sheet, x, rowIndex, colIndex, showNA)
   saveWorkbook(wb, file)
